--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-dataset
+dataset/
 runs/
 results/
 # Distribution / packaging
@@ -27,6 +27,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+models/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
